Add main function

--- a/index.html
+++ b/index.html
@@ -18,132 +18,69 @@
     <!-- game area -->
     <div class="wrap"></div>
        <div class="board">
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="hamster">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/hamster.jpg" alt="hamster" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/hamster.jpg" alt="hamster">
+            <div class="card" data-animal="guineapig">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/guineapig.jpg" alt="guinea pig" class ="view back">
             </div>
-        </div>
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="budgie">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/guineapig.jpg" alt="guinea pig">
+            <div class="card" data-animal="guineapig">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/guineapigbel.jpg" alt="marskaia svinka" class ="view back">
             </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="dog">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/dog.jpg" alt="dog" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk">
+            <div class="card" data-animal="rabbit">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/rabbit.jpg" alt="rabbit" class ="view back">
             </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="dog">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/dogbel.jpg" alt="sabaka" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/guineapigbel.jpg" alt="marskaia svinka">
+            <div class="card" data-animal="fish">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/fish.jpg" alt="fish" class ="view back">
             </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="turtle">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/turtlebel.jpg" alt="charapaha" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/dog.jpg" alt="dog">
+            <div class="card" data-animal="budgie">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/budgie.jpg" alt="budgie" class ="view back">
             </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="cat">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/cat.jpg" alt="cat" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/rabbit.jpg" alt="rabbit">
+            <div class="card" data-animal="rabbit">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/rabbitbel.jpg" alt="trus" class ="view back">
             </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="cat">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/catbel.jpg" alt="kocik" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/dogbel.jpg" alt="sabaka">
+            <div class="card" data-animal="hamster">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/hamsterbel.jpg" alt="hamiak" class ="view back">
             </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
+            <div class="card" data-animal="turtle">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/turtle.jpg" alt="turtle" class ="view back">
             </div>
-            <div class ="view back">
-                <img src="assets/images/fish.jpg" alt="fish">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/turtlebel.jpg" alt="charapaha">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/budgie.jpg" alt="budgie">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/cat.jpg" alt="cat">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/rabbitbel.jpg" alt="trus">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/catbel.jpg" alt="kocik">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/hamsterbel.jpg" alt="hamiak">
-            </div>
-        </div>                      
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/turtle.jpg" alt="turtle">
-            </div>
-        </div>           
-        <div class="card">
-            <div class ="view front">
-                <img src="assets/images/question.jpg" alt="question">
-            </div>
-            <div class ="view back">
-                <img src="assets/images/fishbel.jpg" alt="rybka">
+            <div class="card" data-animal="fish">
+                <img src="assets/images/question.jpg" alt="question" class ="view front">
+                <img src="assets/images/fishbel.jpg" alt="rybka" class ="view back">
             </div>
         </div>
       </div>           
