--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <h1>Pets Cards</h1>
     </header>
     <!-- game area -->
-    <div class="wrap"></div>
        <div class="board">
             <div class="card" data-animal="hamster">
                 <img src="assets/images/question.jpg" alt="question" class ="view front">
@@ -84,7 +83,7 @@
             </div>
         </div>
       </div>           
-    
+    <button class="restart">Play Again</button>
 
     <script src="assets/js/script.js"></script>
 </body>
