Add time, flip buttons

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 <img src="assets/images/fishbel.jpg" alt="rybka" class ="view back">
             </div>
         </div>
-      </div>           
+      </div>
+    <button class="time">Time: <span>20</span>s</button>
+    <button class="flips">Flips: <span>0</span></button>             
     <button class="restart">Play Again</button>
 
     <script src="assets/js/script.js"></script>
