--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
       </div>
-    <button class="timer">Time: <span>2</span></button>
+    <button class="timer">Time: <span id="timer"></span></button>
     <button class="flips">Flips: <span>0</span></button>             
     <button class="restart">Play Again</button>
 
