Add javascript for timer and flips buttons

--- a/index.html
+++ b/index.html
@@ -15,79 +15,11 @@
     <header>
         <h1>Pets Cards</h1>
     </header>
-    <!-- game area -->
-       <div class="board">
-            <div class="card" data-animal="hamster">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/hamster.jpg" alt="hamster" class ="view back">
-            </div>
-            <div class="card" data-animal="guineapig">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/guineapig.jpg" alt="guinea pig" class ="view back">
-            </div>
-            <div class="card" data-animal="budgie">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/budgiebel.jpg" alt="papuhajchyk" class ="view back">
-            </div>
-            <div class="card" data-animal="guineapig">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/guineapigbel.jpg" alt="marskaia svinka" class ="view back">
-            </div>
-            <div class="card" data-animal="dog">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/dog.jpg" alt="dog" class ="view back">
-            </div>
-            <div class="card" data-animal="rabbit">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/rabbit.jpg" alt="rabbit" class ="view back">
-            </div>
-            <div class="card" data-animal="dog">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/dogbel.jpg" alt="sabaka" class ="view back">
-            </div>
-            <div class="card" data-animal="fish">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/fish.jpg" alt="fish" class ="view back">
-            </div>
-            <div class="card" data-animal="turtle">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/turtlebel.jpg" alt="charapaha" class ="view back">
-            </div>
-            <div class="card" data-animal="budgie">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/budgie.jpg" alt="budgie" class ="view back">
-            </div>
-            <div class="card" data-animal="cat">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/cat.jpg" alt="cat" class ="view back">
-            </div>
-            <div class="card" data-animal="rabbit">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/rabbitbel.jpg" alt="trus" class ="view back">
-            </div>
-            <div class="card" data-animal="cat">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/catbel.jpg" alt="kocik" class ="view back">
-            </div>
-            <div class="card" data-animal="hamster">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/hamsterbel.jpg" alt="hamiak" class ="view back">
-            </div>
-            <div class="card" data-animal="turtle">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/turtle.jpg" alt="turtle" class ="view back">
-            </div>
-            <div class="card" data-animal="fish">
-                <img src="assets/images/question.jpg" alt="question" class ="view front">
-                <img src="assets/images/fishbel.jpg" alt="rybka" class ="view back">
-            </div>
-        </div>
-      </div>
-    <button class="timer">Time: <span id="timer"></span></button>
-    <button class="flips">Flips: <span>0</span></button>             
-    <button class="restart">Play Again</button>
-
-    <script src="assets/js/script.js"></script>
+<div>
+    <p>Welcome 8 pairs of animal, you need to find.., time to complete, button back to home from a game page</p>
+</div>
+    <a href="game.html" class="btn">Play</a>   
+        
 </body>
 
 </html>
